# compilers_smallbasic

./: .ycm_extra_conf.py  CMakeLists.txt  grammar.cxx  grammar.h  lexeme.cxx  lexeme.h  lexems_model.cxx  lexems_model.h  main.cxx  main_window.cxx  main_window.h  program_code.cxx  program_code.h  program_struct.cxx  program_struct.h  program_tree.cxx  program_tree.h  rules.txt  syntax.cxx  syntax.h  test.ba
report2/: report2.tex
report3/: report3.tex
report4/: report4.tex
